# AI-English-Teaching

./: .claudeignore  CLAUDE.md  FINAL_SUMMARY.md  LICENSE  TEACHER_REPORTS_IMPLEMENTATION.md  TESTING_DOCUMENTATION.md  final_test_verification.py  test_teacher_reports.py
backend/: .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  clean_test_users.py  docker-compose.yml  init_db.sql  init_full_db.sql  init_mistake_data.py  init_test_data.py  option2_completion_summary.md  performance_optimization_report.md  pyproject.toml  test_api_endpoints.py  test_conversation_api.py  test_conversation_integration.py  test_db_crud.py  test_final_summary.py  test_pdf_export.py  test_performance.py  test_rate_limiter.py  test_simple_zhipuai.py  test_zhipuai.py  test_zhipuai_real.py
backend/alembic/: env.py
backend/alembic/versions/: 20260202_1107_f0c40f107c40_初始化ai英语教学系统数据库.py  20260202_1258_9a6282cdb4bd_add_conversation_model.py  20260203_1026_6180530e656a_add_practice_and_class_models.py  20260203_1200_add_mistake_model.py  20260203_2100_add_learning_report_model.py  20260204_2200_add_practice_question_system.py  20260206_1600_add_lesson_plan_sharing.py  20260206_1700_add_notification_preferences.py  20260206_add_query_indexes.py  20260207_1000_add_export_system.py  CLAUDE.md
backend/app/: CLAUDE.md  __init__.py  main.py
backend/app/api/: CLAUDE.md  deps.py
backend/app/core/: CLAUDE.md  __init__.py  celery.py  config.py  constants.py  exception_handler.py  exceptions.py  rate_limiter.py  redis.py  security.py  token_blacklist.py
backend/app/db/: CLAUDE.md  base.py  session.py  session_manager.py
backend/app/metrics/: CLAUDE.md  __init__.py  export_metrics.py
backend/app/models/: CLAUDE.md  __init__.py  async_task.py  class_model.py  content.py  conversation.py  export_task.py  export_template.py  knowledge_graph.py  learning_report.py  lesson_plan.py  lesson_plan_share.py  mistake.py  notification_preference.py  organization.py  practice.py  practice_session.py  question.py  recommendation.py  share_statistics_history.py  student.py  teacher.py  user.py
backend/app/schemas/: CLAUDE.md  __init__.py  auth.py  conversation.py  knowledge_graph.py  lesson_plan.py  lesson_share.py  notification_preference.py  recommendation.py  user.py
backend/app/services/: CLAUDE.md  __init__.py  ai_service.py  async_file_storage_service.py  async_task_service.py  auth_service.py  chart_data_service.py  content_deduplication_service.py  content_import_service.py  content_renderer_service.py  conversation_service.py  embedding_service.py  export_service.py  export_task_processor.py  file_storage_service.py  graph_rules.py  knowledge_graph_service.py  learning_report_service.py  lesson_plan_export_service.py  lesson_plan_service.py  lesson_plan_share_service.py  mistake_analysis_schemas.py  mistake_analysis_service.py  mistake_export_service.py  mistake_review_service.py  mistake_service.py  notification_preference_service.py  pdf_renderer_service.py  ppt_export_service.py  practice_service.py  progress_notifier.py  (+14 more)
backend/docs/: knowledge-graph-cost-optimization.md
backend/examples/: CLAUDE.md  pdf_generator_demo.py
backend/scripts/: init_content_library.py  init_lesson_templates.py  run_template_init.py  seed_test_data.py  verify-services.sh
backend/storage/: raft_state.json
backend/tests/: CLAUDE.md  conftest.py  test_ai_service_refactoring.py  test_database_indexes.py  test_exception_handling.py
(+451 files in other folders)
